blockml/test/errors/03_view/e215/e215.view
view: e215
derived_table: |
  'SELECT * FROM ...'
permanent: abc    
fields:
- dimension: dim1
  sql: 111



